KC fix welcome screen stretching

--- a/kiss-cakic/style/kc_style.css
+++ b/kiss-cakic/style/kc_style.css
@@ -106,11 +106,17 @@ img {
     transform: translate(14px, 280px);
 }
 
-#xp_welcome {
+#xp_welcome_bg {
 	height: 100vh;
 	width: 100vw;
 	top: 0;
     left: 0;
+}
+
+#xp_welcome_label {
+	top: 50%;
+    left: 50%;
+	transform: translate(-20%, -75%);
 }
 
 #terminal {
